Closed
Bug 334436
Opened 19 years ago
Closed 19 years ago
nsslowcert_UpdateSubjectEmailAddr doesn't consistently use emailAddrs as a guard of nemailAddrs guarding emailAddrs[0]
Categories
(NSS :: Libraries, defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
3.11.1
People
(Reporter: timeless, Assigned: alvolkov.bgs)
References
()
Details
(Keywords: coverity, crash, Whiteboard: CID 227)
Attachments
(1 file)
|
1.00 KB,
patch
|
nelson
:
review+
|
Details | Diff | Splinter Review |
found by coverity
i'm guessing there's an assertion to be had here and that the null check can be removed.
Attachment #218779 -
Flags: review?
Attachment #218779 -
Flags: review? → review?(nelson)
Updated•19 years ago
|
Target Milestone: --- → 3.11.1
Updated•19 years ago
|
Priority: -- → P2
Hardware: PC → All
Comment 2•19 years ago
|
||
Comment on attachment 218779 [details] [diff] [review]
remove hopefully unnecessary null check
Yes, it appears that this null check is unnecessary.
I see nothing critical about an extra null pointer check.
Attachment #218779 -
Flags: review?(nelson) → review+
Comment 3•19 years ago
|
||
Alexei, please check in.
Assignee: nobody → alexei.volkov.bugs
Severity: critical → trivial
Priority: P2 → P3
| Assignee | ||
Comment 4•19 years ago
|
||
tip:
/cvsroot/mozilla/security/nss/lib/softoken/pcertdb.c,v <-- pcertdb.c
new revision: 1.60; previous revision: 1.59
3.11 branch:
/cvsroot/mozilla/security/nss/lib/softoken/pcertdb.c,v <-- pcertdb.c
new revision: 1.53.2.6; previous revision: 1.53.2.5
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•